pichome/2.service-clusterip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pichome
  namespace: devops
  labels:
    app: pichome
spec:
  sessionAffinity: ClientIP
  selector:
    app: pichome
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
